fixed search box always show scrollbar.

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -10,7 +10,7 @@ screen-fullhd = 1472px
  * --------------------------------- */
 html
     font-size: 14px
-    overflow: -moz-hidden-unscrollable;
+    //overflow: -moz-hidden-unscrollable;
 
 
 //body
@@ -564,3 +564,7 @@ figure.highlight
     p
         img
             width: 100%
+
+.searchbox
+    .searchbox-result-wrapper
+        overflow-y visible
